# watercooler

./: .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  REFACTOR_REVIEW.md  SECURITY.md  TESTING.md  copy.bara.sky  main.py  nixpacks.toml  pyproject.public.toml  pyproject.toml  railway.json  slack-integration.md  system-service-refactor-merge-plan.md  test-thread-propagation-03.md  thread-propagation-design.md
.claude/agents/: graphrag-engineer.md
.github/workflows/: check-forbidden-paths.yml  ci.yml  claude-code-review.yml  copybara-dry-run.yml  copybara-publish.yml
dev_docs/: ARCHITECTURE.md  CONTRIBUTING.md  DECISION_TRACE_EXTRACTION_GUIDE.md  GRAPH_SYNC.md  LEANRAG_ARCHITECTURE.md  SEMANTIC_BRIDGE.md  baseline-graph.md  http-transport.md  visualization.md
dev_docs/brainstorms/: 2026-02-19-federation-phase1-brainstorm.md  2026-02-21-t3-epistemological-integration-brainstorm.md  2026-02-25-t2-supersession-brainstorm.md  2026-02-26-copybara-public-release-sync-brainstorm.md  2026-02-27-configuration-docs-update-brainstorm.md  2026-03-02-user-docs-refresh-brainstorm.md  2026-03-09-parallel-sprint-brainstorm.md
dev_docs/displaced/: INSTALLATION.md  README.md  mcp-server.md
dev_docs/plans/: 2026-02-21-feat-t3-leanrag-plumbing-semantic-bridge-plan.md  2026-02-23-fix-leanrag-llm-timeout-retry-hardening-plan.md  2026-02-24-fix-memory-bulk-index-dedup-guard-plan.md  2026-02-26-feat-t2-supersession-phase1-plan.md  2026-02-27-docs-configuration-md-parity-update-plan.md  2026-03-02-docs-user-docs-refresh-plan.md  2026-03-03-fix-docs-review-findings-063-076-plan.md  2026-03-04-feat-copybara-stable-to-public-sync-pipeline-plan.md  2026-03-09-feat-parallel-sprint-skill-plan.md
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BINARY_SECURITY.md  BRANCH_PAIRING.md  CHATGPT_MCP_INTEGRATION.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  DECISION_TRACE_EXTRACTION_GUIDE.md  ENVIRONMENT_VARS.md  EXAMPLE_WORKFLOWS.md  FAQ.md  GRAPHITI_SETUP.md  GRAPH_SYNC.md  INSTALLATION.md  LEANRAG_SETUP.md  MCP-CLIENTS.md  MEMORY.md  MEMORY_BACKEND_STATUS.md  QUICKSTART.md  README.md  SEMANTIC_BRIDGE.md  SLACK_INTEGRATION.md  STRUCTURED_ENTRIES.md  THREADS_REPO_LIFECYCLE.md  TIER_MIGRATION.md  TOOLS-REFERENCE.md  TROUBLESHOOTING.md  WORKFLOW_EXAMPLES.md  baseline-graph.md  http-transport.md  mcp-server.md
docs/archive/: integration.md
docs/plans/: 2026-02-19-feat-federated-search-phase1-plan.md
scripts/: README.md  _sync_helpers.py  check-memory-config.py  enrich_baseline_graph.py  index_graphiti.py  index_leanrag.py  install-mcp.ps1  install-mcp.sh  merge_duplicate_entities.py  migrate_embeddings_to_falkordb.py  migrate_jsonl_embeddings_to_falkordb.py  migrate_to_orphan_branch.py  migrate_to_per_thread.py  migrate_to_structured_layout.py  project_baseline_graph.py  recover_baseline_graph.py  strip_embeddings_from_entries.py  validate-copybara-allowlist.py
skills/find-related/: SKILL.md
skills/recall/: SKILL.md
skills/watercooler-health/: SKILL.md
src/watercooler/: __init__.py  cli.py  commands.py  commands_graph.py  config_facade.py  config_loader.py  config_schema.py  credentials.py  embedding_models.py  fs.py  memory_config.py  models.py  path_resolver.py  slack_cli.py  testing.py  thread_entries.py
src/watercooler_mcp/: __init__.py  auth.py  branch_parity.py  cache.py  config.py  context.py  errors.py  git_sync.py  github_api.py  helpers.py  hosted_ops.py  (+11 more)
tests/: conftest.py  test_backend_smoke.py  test_config.py  test_issue_ranker_analyze_relationships.py  test_issue_ranker_apply_labels.py  test_issue_ranker_fetch_issues.py  test_leanrag_plumbing.py  test_memory_e2e.py  test_parallel_sprint_scripts.py
todos/: 001-pending-p1-replace-negate-timestamp.md  002-pending-p1-type-entry-data-dict.md  003-pending-p1-extract-getattr-helper.md  004-pending-p2-propagate-action-hint.md  005-pending-p2-return-resolved-path.md  006-pending-p2-use-relative-to-for-containment.md  007-pending-p2-add-toplevel-exception-handler.md  008-pending-p2-fix-toctou-comment.md  009-pending-p2-dedicated-thread-pool.md  010-pending-p3-remove-referenced-weight.md  011-pending-p3-simplify-lens-weight-tier.md  012-pending-p3-inline-allocate-candidates.md  013-pending-p3-remove-unused-namespace-param.md  014-pending-p3-remove-dead-thread-topic-assignment.md  015-pending-p3-remove-redundant-entry-guard.md  016-pending-p1-replace-string-sentinel-with-enum.md  017-pending-p1-fix-log-injection-in-federation.md  018-pending-p1-fix-total-timeout-discards-results.md  019-pending-p2-primary-namespace-id-collision.md  020-pending-p2-naive-datetime-utc-assumption.md  021-pending-p2-code-branch-stub-signaling.md  022-pending-p2-max-namespaces-primary-counted.md  023-pending-p2-add-tool-to-instructions-resource.md  024-pending-p2-document-tool-in-mcp-server-md.md  025-pending-p2-consistent-schema-version-errors.md  026-pending-p2-remove-phantom-config-keys.md  027-pending-p2-remove-unreachable-oserror-catch.md  028-pending-p3-double-timestamp-parsing.md  029-pending-p3-precompute-deny-topics-frozenset.md  030-pending-p3-fix-import-ordering.md  031-pending-p3-remove-dead-global-variable.md  032-pending-p3-update-legacy-typing-imports.md  033-pending-p3-namespaces-param-type.md  034-pending-p2-fragile-task-name-parsing.md  035-pending-p2-namespace-status-docs-mismatch.md  036-pending-p3-primary-ns-id-silent-fallback.md  037-pending-p3-min-score-drops-primary-results.md  038-pending-p3-entry-data-missing-timestamp.md  039-pending-p3-zero-weight-silences-namespace.md
user_docs/: AUTHENTICATION.md  CONFIGURATION.md
(+323 files in other folders)
